# curvature-cutfem-thesis

./: CMakeLists.txt  README.md
cmake/: FindCUTFEM.cmake
julia/: Manifest.toml  Project.toml  cond_2d.jl  cond_2d_algoim.jl  condplotting.jl  conv_2d.jl  conv_2d_algoim.jl  conv_3d.jl  conv_3d_algoim.jl  convplotting.jl  install_deps.jl
matlab/: compute_cond_sym.m  cond2d_algoim.m  cond_2d.m  cond_2d_algoim.m  cond_3d.m  convergence_2d.m  convergence_2d_algoim.m  convergence_3d.m  convergence_3d_algoim.m  convergence_3d_hexa.m  get_rates.m  plot_cond.m  plot_conv.m  plot_n_conv.m  process_condition_number.m  process_example_data.m
scripts/: auto_2d_algoim.sh  auto_3d.sh  auto_3d_algoim.sh  auto_p1q1_2d.sh
src/curvature/: curvature_2d.cpp  curvature_2d_algoim.cpp  curvature_3d.cpp  curvature_3d_algoim.cpp  curvature_3d_hexa.cpp
src/curvature/legacy/: curvature_2d.cpp  load_export_eigenmodes.cpp  test_curvature.cpp
